src/objects/FacebookApp__c.object
<CustomObject>
    <fields>
        <fullName>clientID__c</fullName>
        <inlineHelpText>Also know as the Application ID</inlineHelpText>
        <label>App ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientSecret__c</fullName>
        <inlineHelpText>Also known as Application Secret</inlineHelpText>
        <label>App Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>permissions__c</fullName>
        <inlineHelpText>When a Facebook user authorizes your application, your application gets access to the user&apos;s data. By default, your application can access all public data in a user&apos;s profile. If you need to access other data you must request additional permissions.</inlineHelpText>
        <label>Permissions</label>
        <picklist>
            <picklistValues>
                <fullName>user_about_me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_checkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_education_history</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_hometown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_interests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_likes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_online_presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_photo_video_tags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_relationship_details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_religion_politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_videos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>user_work_history</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>friends_about_me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>friends_activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>friends_birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>friends_checkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>friends_education_history</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>friends_events</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Facebook App</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facebook Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>